<resources>
    <string name="app_name">FOOTBALL RESULTS DIARY</string>
    <string name="main_menu_title">MAIN MENU</string>
    <string name="teams_list">Manage Teams</string>
    <string name="add_game">Add Game</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="btn_search_team">Search</string>
    <string name="btn_back">To Menu</string>
    <string name="btn_add_team">Add</string>
    <string name="date">Date</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="home_team_score">Home Team Score</string>
    <string name="away_team_score">Away Team Score</string>
    <string name="home_team_name_hint">name</string>
    <string name="away_team_name_hint">name</string>
    <string name="home_team_score_hint">num</string>
    <string name="away_team_score_hint">num</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="remove_team">Remove Team</string>
    <string name="untitled"></string>
</resources>
